# arcana

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: baseline.json
examples/: backtest.rs  candles.csv  multi_output.rs  pairs.rs  strategy.params.yml  strategy.rs  strategy.yml
python/: README.md
python/src/: lib.rs
python/tests/: test_arcana.py  test_fugazi.py
src/: indicator.rs  lib.rs  signal.rs  strategy.rs  types.rs
src/cli/: backtest.rs  get.rs  list.rs  main.rs  metrics.rs  params.rs  spec.rs
src/indicators/: adx.rs  aroon.rs  atr.rs  bollinger.rs  candle.rs  component.rs  dmi.rs  donchian.rs  ema.rs  identity.rs  keltner.rs  macd.rs  mod.rs  ops.rs  rma.rs  rsi.rs  sma.rs  smoothing.rs  stats.rs  stddev.rs  stochastic.rs  true_range.rs  value.rs
src/signals/: compare.rs  mod.rs
src/strategies/: composite.rs  mean_reversion.rs  mod.rs  momentum.rs  single_asset.rs  trend.rs  volume.rs
tests/: composition.rs  metrics_validation.rs  sources_binance.rs  strategies.rs  talib_validation.rs
tests/data/: README.md  aapl_monthly.csv  metrics_returns.csv
tools/: environment.yml  gen_metrics_fixtures.py  gen_metrics_returns.py  gen_talib_fixtures.py
